--- a/thank-you.html
+++ b/thank-you.html
@@ -25,7 +25,7 @@
                     <li><span class="step-number">3</span> In the meantime, feel free to gather any additional materials or ideas you think might be helpful.</li>
                 </ul>
             </div>
-            <a href="index.html" class="back-to-home-btn">Submit Another Inquiry (Test)</a>
+            <a href="index.html" class="back-to-home-btn">Submit Another Inquiry</a>
             </div>
     </div>
 </body>
